# azure-datamodel

./: README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml  run_tests.yml  test.yml  test_release.yml
tests/: conftest.py  test_model.py
tests/fixtures/: filepaths.py  model.py
