[tool.poetry]
name = "azure_datamodel"
version = "0.1.0"
description = "Example datamodel to use in the Azure-* repos"
authors = ["Ben Cannell"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.4.2"
pytest = "^7.4.2"
black = "^23.9.1"

[tool.poetry.group.dev.dependencies]
pydantic = "^2.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
